<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context="edu.floridapoly.mobiledev.crimetrackerapp.HomeScreenActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textSize="35sp"
        android:textAlignment="center"
        android:text="@string/app_name"
        android:textColor="@color/white_text_color"
        app:fontFamily="sans-serif"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:textAlignment="center"
        android:text="@string/app_version"
        android:textColor="@color/white_text_color"
        app:fontFamily="sans-serif" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="10dp"
        android:text="@string/action_activities"
        android:textColor="@color/secondary_color"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="10dp"
        android:text="@string/action_map_view"
        android:textColor="@color/secondary_color"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="10dp"
        android:text="@string/action_settings"
        android:textColor="@color/secondary_color"
        android:clickable="true"
        android:focusable="true"/>

</LinearLayout>
